# utils_rpa

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-17-async-retry-with-logging.md
docs/superpowers/specs/: 2026-07-17-async-retry-with-logging-design.md
src/utils_rpa/: __init__.py  anti_captcha.py  forms.py  logger.py  retry.py  screenshot.py
tests/: test_anti_captcha.py  test_forms.py  test_logger.py  test_package.py  test_retry.py  test_screenshot.py
