[project]
name = "utils-rpa"
version = "0.1.1"
description = "Conjunto de utilitários e configurações para facilitar o desenvolvimento de RPA com Python."
authors = [
    {name = "Emanuel Borges Albano",email = "emanuelborgesdev@gmail.com.br"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["rpa", "automation", "automacao", "utils", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "concurrent-log-handler (>=0.9.25,<1.0.0)",
    "mss (>=10.2.0,<11.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "selenium (>=4.45.0,<5.0.0)",
    "playwright (>=1.61.0,<2.0.0)",
]

[project.optional-dependencies]
selenium = [
    "selenium (>=4.10.0)",
    "anticaptchaofficial (>=1.0.46)",
]
playwright = [
    "playwright (>=1.40.0)",
    "anticaptchaofficial (>=1.0.46)",
]
requests = [
    "requests (>=2.28.0)",
    "beautifulsoup4 (>=4.11.0)",
    "anticaptchaofficial (>=1.0.46)",
]
all = [
    "selenium (>=4.10.0)",
    "playwright (>=1.40.0)",
    "anticaptchaofficial (>=1.0.46)",
]

[project.urls]
Homepage = "https://github.com/Necobgs/utils_rpa"
Repository = "https://github.com/Necobgs/utils_rpa"
Issues = "https://github.com/Necobgs/utils_rpa/issues"

[tool.poetry]
packages = [{include = "utils_rpa", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.9.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
